# drover

./: .drover.toml.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.telemetry.yaml  go.mod  go.sum  load-json.sh  load-tasks-part2.sh  load-tasks.sh  otel-collector-config.yaml
.drover/: drover.db
cmd/drover/: commands.go  dbos_demo.go  main.go  spec.go
cmd/drover-worker/: main.go
design/: DESIGN.md  roborev-enhancements.md  worktree-prewarming-dashboard.md
docs/: conversation-search-guide.md  index.md
examples/: gather-project.jsonl
internal/analytics/: analytics_test.go
internal/backpressure/: controller.go  controller_test.go
internal/beads/: sync.go
internal/config/: config.go  config_test.go
internal/dashboard/: handlers.go  hooks.go  queries.go  server.go
internal/db/: db.go  db_test.go  idutil.go  idutil_test.go  subtask_workflow_test.go
internal/executor/: agent.go  amp_agent.go  claude.go  claude_agent.go  claude_test.go  codex_agent.go  factory.go  factory_test.go  opencode.go  opencode_agent.go  opencode_test.go  worker_agent.go
internal/git/: pool.go  pool_test.go  worktree.go  worktree_test.go
internal/mailbox/: DESIGN.md  files.go  types.go
internal/memory/: tracker.go  tracker_test.go
internal/outcome/: types.go
internal/project/: config.go
internal/spec/: analyzer.go  parser.go  types.go  writer.go
internal/taskcontext/: context.go  context_test.go
internal/template/: task.go
internal/test/: README.md  hello_test.go
internal/worker/: DESIGN.md  (+3 more)
src/: config.rs  lib.rs  main.rs
(+31 files in other folders)
